--- a/public/index.html
+++ b/public/index.html
@@ -3,11 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./styles/css/style.css">k
     <title>The Memory Game</title>
 </head>
 <body>
-    <nav>
-        
+    <nav class="navFlex">
+        <div>
+
+        </div>
     </nav>
 </body>
 </html>
