--- a/public/index.html
+++ b/public/index.html
@@ -3,13 +3,21 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./styles/css/style.css">k
+    <link rel="stylesheet" href="./css/style.css">
+    <script src="https://kit.fontawesome.com/f25d8c8b5a.js" crossorigin="anonymous"></script>
     <title>The Memory Game</title>
 </head>
-<body>
+<body class="cardBG">
     <nav class="navFlex">
-        <div>
 
+            <img src="./images/memory.png" alt="" class="navLogo">
+        <div>
+            <button class="navBtn navAudio">
+                <i class="fa-solid fa-volume-high" style="color: #ffffff;"></i>
+            </button>
+            <button class="navBtn navQuit">
+                <i class="fa-solid fa-right-from-bracket" style="color: #ffffff;"></i>
+            </button>
         </div>
     </nav>
 </body>
