--- a/public/index.html
+++ b/public/index.html
@@ -20,5 +20,30 @@
             </button>
         </div>
     </nav>
+    <section>
+        <!-- Card Game -->
+    </section>
+    <footer class="footerFlex">
+        <div class="topFooter">
+            Remaining Matches: 9
+        </div>
+        <div class="bottomFooter">
+            <div class="bestTime bottomBtn bottomTime">
+                <img src="./images/trophy.webp" alt="trophy">
+                <div id="bestTime">
+                    0:12
+                </div>
+            </div>
+            <div class="currentTime bottomBtn bottomTime">
+                <img src="./images/clock.png" alt="clock">
+                <div id="currentTime">
+                    0:12
+                </div>
+            </div>
+            <div class="resetBtn bottomBtn">
+                RESET
+            </div>
+        </div>
+    </footer>
 </body>
 </html>
