--- a/public/index.html
+++ b/public/index.html
@@ -12,17 +12,64 @@
 
             <img src="./images/memory.png" alt="" class="navLogo">
         <div>
-            <button class="navBtn navAudio">
-                <i class="fa-solid fa-volume-high" style="color: #ffffff;"></i>
+            <button class="navBtn navScore">
+                <i class="fa-solid fa-star" style="color: #ffffff;"></i>
             </button>
             <button class="navBtn navQuit">
                 <i class="fa-solid fa-right-from-bracket" style="color: #ffffff;"></i>
             </button>
         </div>
     </nav>
-    <section>
-        <!-- Card Game -->
-    </section>
+    <div class="container">
+        <div class="cell">
+            <div class="front" data-index="1"><img src="./images/cheese.png" alt="" class="memImg"></div>
+            <div class="back"><img src="./images/mark.webp" alt="" class="memImg"></div>
+        </div>
+        <div class="cell">
+            <div class="front" data-index="1"><img src="./images/cheese.png" alt="" class="memImg"></div>
+            <div class="back"><img src="./images/mark.webp" alt="" class="memImg"></div>
+        </div>
+        <div class="cell">
+            <div class="front" data-index="2"><img src="./images/skull.png" alt="" class="memImg"></div>
+            <div class="back"><img src="./images/mark.webp" alt="" class="memImg"></div>
+        </div>
+        <div class="cell">
+            <div class="front" data-index="2"><img src="./images/skull.png" alt="" class="memImg"></div>
+            <div class="back"><img src="./images/mark.webp" alt="" class="memImg"></div>
+        </div>
+        <div class="cell">
+            <div class="front" data-index="3"><img src="./images/nerd.webp" alt="" class="memImg"></div>
+            <div class="back"><img src="./images/mark.webp" alt="" class="memImg"></div>
+        </div>
+        <div class="cell">
+            <div class="front" data-index="3"><img src="./images/nerd.webp" alt="" class="memImg"></div>
+            <div class="back"><img src="./images/mark.webp" alt="" class="memImg"></div>
+        </div>
+        <div class="cell">
+            <div class="front" data-index="4"><img src="./images/cook.png" alt="" class="memImg"></div>
+            <div class="back"><img src="./images/mark.webp" alt="" class="memImg"></div>
+        </div>
+        <div class="cell">
+            <div class="front" data-index="4"><img src="./images/cook.png" alt="" class="memImg"></div>
+            <div class="back"><img src="./images/mark.webp" alt="" class="memImg"></div>
+        </div>
+        <div class="cell">
+            <div class="front" data-index="5"><img src="./images/teeth.png" alt="" class="memImg"></div>
+            <div class="back"><img src="./images/mark.webp" alt="" class="memImg"></div>
+        </div>
+        <div class="cell">
+            <div class="front" data-index="5"><img src="./images/teeth.png" alt="" class="memImg"></div>
+            <div class="back"><img src="./images/mark.webp" alt="" class="memImg"></div>
+        </div>
+        <div class="cell">
+            <div class="front" data-index="6"><img src="./images/tennis.png" alt="" class="memImg"></div>
+            <div class="back"><img src="./images/mark.webp" alt="" class="memImg"></div>
+        </div>
+        <div class="cell">
+            <div class="front" data-index="6"><img src="./images/tennis.png" alt="" class="memImg"></div>
+            <div class="back"><img src="./images/mark.webp" alt="" class="memImg"></div>
+        </div>
+    </div>
     <footer class="footerFlex">
         <div class="topFooter">
             Remaining Matches: 9
@@ -45,5 +92,6 @@
             </div>
         </div>
     </footer>
+    <script src="script.js"></script>
 </body>
 </html>
