--- a/public/index.html
+++ b/public/index.html
@@ -77,7 +77,7 @@
     </section>
     <footer class="footerFlex">
         <div class="topFooter" id="remain">
-            Matches Found
+            Matches Found: 0
         </div>
         <div class="bottomFooter">
             <div class="bestTime bottomBtn bottomTime">
